<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Section"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/section_logo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/logo_horizontal"/>
    <TextView
        android:id="@+id/section_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/section1_title"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="20dp"
        android:background="@color/yellow"
        android:textColor="@color/dark_green"
        android:textStyle="bold"
        android:textAllCaps="true" />
    <ScrollView
        android:id="@+id/section_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">
        <LinearLayout
            android:id="@+id/section_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/section_why"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/section_why"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_green"/>
                <TextView
                    android:id="@+id/section_why_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="@color/dark_grey"
                    android:layout_marginTop="10dp"
                    android:text="@string/section1_why_text"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/section_how"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/section_how"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_green"/>
                <TextView
                    android:id="@+id/section_how_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="@color/dark_grey"
                    android:layout_marginTop="10dp"
                    android:text="@string/section1_how_text"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/section_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/section_next"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_green"/>
                <TextView
                    android:id="@+id/section_next_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="@color/dark_grey"
                    android:layout_marginTop="10dp"
                    android:text="@string/section1_next_text"/>
            </LinearLayout>
            <Button
                android:id="@+id/section_button_next"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:backgroundTint="@color/dark_green"
                android:text="@string/button_next"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>